3/cminus.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: declaration-list

    2 declaration-list: declaration-list declaration
    3                 | declaration

    4 declaration: var-declaration
    5            | fun-declaration

    6 var-declaration: type-specifier var-decl-list SEMICOLON

    7 scoped-var-declaration: scoped-type-specifier var-decl-list SEMICOLON

    8 var-decl-list: var-decl-list COMMA var-decl-initialize
    9              | var-decl-initialize

   10 var-decl-initialize: var-decl-id
   11                    | var-decl-id COLON simple-expression

   12 var-decl-id: ID
   13            | ID LBRACKET NUMCONST RBRACKET

   14 scoped-type-specifier: STATIC type-specifier
   15                      | type-specifier

   16 type-specifier: INT
   17               | BOOL
   18               | CHAR

   19 fun-declaration: type-specifier ID LPAREN params RPAREN statement
   20                | ID LPAREN params RPAREN statement

   21 params: param-list
   22       | /* empty */

   23 param-list: param-list SEMICOLON param-type-list
   24           | param-type-list

   25 param-type-list: type-specifier param-id-list

   26 param-id-list: param-id-list COMMA param-id
   27              | param-id

   28 param-id: ID
   29         | ID LBRACKET RBRACKET

   30 statement: matched
   31          | unmatched

   32 matched: expression-stmt
   33        | compound-stmt
   34        | matched-selection-stmt
   35        | matched-while-stmt
   36        | matched-foreach-stmt
   37        | return-stmt
   38        | break-stmt

   39 unmatched: unmatched-selection-stmt
   40          | unmatched-while-stmt
   41          | unmatched-foreach-stmt

   42 matched-selection-stmt: IF LPAREN simple-expression RPAREN matched ELSE matched

   43 unmatched-selection-stmt: IF LPAREN simple-expression RPAREN statement
   44                         | IF LPAREN simple-expression RPAREN matched ELSE unmatched

   45 matched-while-stmt: WHILE LPAREN simple-expression RPAREN matched

   46 unmatched-while-stmt: WHILE LPAREN simple-expression RPAREN unmatched

   47 matched-foreach-stmt: FOREACH LPAREN mutable IN simple-expression RPAREN matched

   48 unmatched-foreach-stmt: FOREACH LPAREN mutable IN simple-expression RPAREN unmatched

   49 compound-stmt: LBRACE local-declarations statement-list RBRACE

   50 local-declarations: local-declarations scoped-var-declaration
   51                   | /* empty */

   52 statement-list: statement-list statement
   53               | /* empty */

   54 expression-stmt: expression SEMICOLON
   55                | SEMICOLON

   56 return-stmt: RETURN SEMICOLON
   57            | RETURN expression SEMICOLON

   58 break-stmt: BREAK SEMICOLON

   59 expression: mutable ASSIGN expression
   60           | mutable ADDASS expression
   61           | mutable SUBASS expression
   62           | mutable MULASS expression
   63           | mutable DIVASS expression
   64           | mutable INC
   65           | mutable DEC
   66           | simple-expression

   67 simple-expression: simple-expression OR and-expression
   68                  | and-expression

   69 and-expression: and-expression AND unary-rel-expression
   70               | unary-rel-expression

   71 unary-rel-expression: NOT unary-rel-expression
   72                     | rel-expression

   73 rel-expression: sum-expression relop sum-expression
   74               | sum-expression

   75 relop: LESSEQ
   76      | LTHAN
   77      | GTHAN
   78      | GRTEQ
   79      | EQ
   80      | NOTEQ

   81 sum-expression: sum-expression sumop term
   82               | term

   83 sumop: PLUS
   84      | MINUS

   85 term: term mulop unary-expression
   86     | unary-expression

   87 mulop: MULTIPLY
   88      | DIVIDE
   89      | MODULUS

   90 unary-expression: unaryop unary-expression
   91                 | factor

   92 unaryop: MINUS
   93        | MULTIPLY
   94        | QUESTION

   95 factor: immutable
   96       | mutable

   97 mutable: ID
   98        | ID LBRACKET expression RBRACKET

   99 immutable: LPAREN expression RPAREN
  100          | call
  101          | constant

  102 call: ID LPAREN args RPAREN

  103 args: arg-list
  104     | /* empty */

  105 arg-list: arg-list COMMA expression
  106         | expression

  107 constant: NUMCONST
  108         | CHARCONST
  109         | STRINGCONST
  110         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
error (256)
ERROR (258)
ID (259) 12 13 19 20 28 29 97 98 102
NUMCONST (260) 13 107
STRINGCONST (261) 109
CHARCONST (262) 108
BOOLCONST (263) 110
ADDASS (264) 60
SUBASS (265) 61
MULASS (266) 62
DIVASS (267) 63
INC (268) 64
DEC (269) 65
LESSEQ (270) 75
GRTEQ (271) 78
EQ (272) 79
NOTEQ (273) 80
STATIC (274) 14
INT (275) 16
BOOL (276) 17
CHAR (277) 18
IF (278) 42 43 44
ELSE (279) 42 44
WHILE (280) 45 46
FOREACH (281) 47 48
IN (282) 47 48
RETURN (283) 56 57
BREAK (284) 58
SEMICOLON (285) 6 7 23 54 55 56 57 58
LPAREN (286) 19 20 42 43 44 45 46 47 48 99 102
RPAREN (287) 19 20 42 43 44 45 46 47 48 99 102
LBRACKET (288) 13 29 98
RBRACKET (289) 13 29 98
OR (290) 67
AND (291) 69
NOT (292) 71
ASSIGN (293) 59
PLUS (294) 83
MINUS (295) 84 92
MULTIPLY (296) 87 93
DIVIDE (297) 88
MODULUS (298) 89
QUESTION (299) 94
LTHAN (300) 76
GTHAN (301) 77
LBRACE (302) 49
RBRACE (303) 49
COMMA (304) 8 26 105
COLON (305) 11


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
declaration-list (53)
    on left: 2 3, on right: 1 2
declaration (54)
    on left: 4 5, on right: 2 3
var-declaration (55)
    on left: 6, on right: 4
scoped-var-declaration (56)
    on left: 7, on right: 50
var-decl-list (57)
    on left: 8 9, on right: 6 7 8
var-decl-initialize (58)
    on left: 10 11, on right: 8 9
var-decl-id (59)
    on left: 12 13, on right: 10 11
scoped-type-specifier (60)
    on left: 14 15, on right: 7
type-specifier (61)
    on left: 16 17 18, on right: 6 14 15 19 25
fun-declaration (62)
    on left: 19 20, on right: 5
params (63)
    on left: 21 22, on right: 19 20
param-list (64)
    on left: 23 24, on right: 21 23
param-type-list (65)
    on left: 25, on right: 23 24
param-id-list (66)
    on left: 26 27, on right: 25 26
param-id (67)
    on left: 28 29, on right: 26 27
statement (68)
    on left: 30 31, on right: 19 20 43 52
matched (69)
    on left: 32 33 34 35 36 37 38, on right: 30 42 44 45 47
unmatched (70)
    on left: 39 40 41, on right: 31 44 46 48
matched-selection-stmt (71)
    on left: 42, on right: 34
unmatched-selection-stmt (72)
    on left: 43 44, on right: 39
matched-while-stmt (73)
    on left: 45, on right: 35
unmatched-while-stmt (74)
    on left: 46, on right: 40
matched-foreach-stmt (75)
    on left: 47, on right: 36
unmatched-foreach-stmt (76)
    on left: 48, on right: 41
compound-stmt (77)
    on left: 49, on right: 33
local-declarations (78)
    on left: 50 51, on right: 49 50
statement-list (79)
    on left: 52 53, on right: 49 52
expression-stmt (80)
    on left: 54 55, on right: 32
return-stmt (81)
    on left: 56 57, on right: 37
break-stmt (82)
    on left: 58, on right: 38
expression (83)
    on left: 59 60 61 62 63 64 65 66, on right: 54 57 59 60 61 62 63
    98 99 105 106
simple-expression (84)
    on left: 67 68, on right: 11 42 43 44 45 46 47 48 66 67
and-expression (85)
    on left: 69 70, on right: 67 68 69
unary-rel-expression (86)
    on left: 71 72, on right: 69 70 71
rel-expression (87)
    on left: 73 74, on right: 72
relop (88)
    on left: 75 76 77 78 79 80, on right: 73
sum-expression (89)
    on left: 81 82, on right: 73 74 81
sumop (90)
    on left: 83 84, on right: 81
term (91)
    on left: 85 86, on right: 81 82 85
mulop (92)
    on left: 87 88 89, on right: 85
unary-expression (93)
    on left: 90 91, on right: 85 86 90
unaryop (94)
    on left: 92 93 94, on right: 90
factor (95)
    on left: 95 96, on right: 91
mutable (96)
    on left: 97 98, on right: 47 48 59 60 61 62 63 64 65 96
immutable (97)
    on left: 99 100 101, on right: 95
call (98)
    on left: 102, on right: 100
args (99)
    on left: 103 104, on right: 102
arg-list (100)
    on left: 105 106, on right: 103 105
constant (101)
    on left: 107 108 109 110, on right: 101


state 0

    0 $accept: . program $end

    ID    shift, and go to state 1
    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    program           go to state 5
    declaration-list  go to state 6
    declaration       go to state 7
    var-declaration   go to state 8
    type-specifier    go to state 9
    fun-declaration   go to state 10


state 1

   20 fun-declaration: ID . LPAREN params RPAREN statement

    LPAREN  shift, and go to state 11


state 2

   16 type-specifier: INT .

    $default  reduce using rule 16 (type-specifier)


state 3

   17 type-specifier: BOOL .

    $default  reduce using rule 17 (type-specifier)


state 4

   18 type-specifier: CHAR .

    $default  reduce using rule 18 (type-specifier)


state 5

    0 $accept: program . $end

    $end  shift, and go to state 12


state 6

    1 program: declaration-list .
    2 declaration-list: declaration-list . declaration

    ID    shift, and go to state 1
    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 1 (program)

    declaration      go to state 13
    var-declaration  go to state 8
    type-specifier   go to state 9
    fun-declaration  go to state 10


state 7

    3 declaration-list: declaration .

    $default  reduce using rule 3 (declaration-list)


state 8

    4 declaration: var-declaration .

    $default  reduce using rule 4 (declaration)


state 9

    6 var-declaration: type-specifier . var-decl-list SEMICOLON
   19 fun-declaration: type-specifier . ID LPAREN params RPAREN statement

    ID  shift, and go to state 14

    var-decl-list        go to state 15
    var-decl-initialize  go to state 16
    var-decl-id          go to state 17


state 10

    5 declaration: fun-declaration .

    $default  reduce using rule 5 (declaration)


state 11

   20 fun-declaration: ID LPAREN . params RPAREN statement

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 22 (params)

    type-specifier   go to state 18
    params           go to state 19
    param-list       go to state 20
    param-type-list  go to state 21


state 12

    0 $accept: program $end .

    $default  accept


state 13

    2 declaration-list: declaration-list declaration .

    $default  reduce using rule 2 (declaration-list)


state 14

   12 var-decl-id: ID .
   13            | ID . LBRACKET NUMCONST RBRACKET
   19 fun-declaration: type-specifier ID . LPAREN params RPAREN statement

    LPAREN    shift, and go to state 22
    LBRACKET  shift, and go to state 23

    $default  reduce using rule 12 (var-decl-id)


state 15

    6 var-declaration: type-specifier var-decl-list . SEMICOLON
    8 var-decl-list: var-decl-list . COMMA var-decl-initialize

    SEMICOLON  shift, and go to state 24
    COMMA      shift, and go to state 25


state 16

    9 var-decl-list: var-decl-initialize .

    $default  reduce using rule 9 (var-decl-list)


state 17

   10 var-decl-initialize: var-decl-id .
   11                    | var-decl-id . COLON simple-expression

    COLON  shift, and go to state 26

    $default  reduce using rule 10 (var-decl-initialize)


state 18

   25 param-type-list: type-specifier . param-id-list

    ID  shift, and go to state 27

    param-id-list  go to state 28
    param-id       go to state 29


state 19

   20 fun-declaration: ID LPAREN params . RPAREN statement

    RPAREN  shift, and go to state 30


state 20

   21 params: param-list .
   23 param-list: param-list . SEMICOLON param-type-list

    SEMICOLON  shift, and go to state 31

    $default  reduce using rule 21 (params)


state 21

   24 param-list: param-type-list .

    $default  reduce using rule 24 (param-list)


state 22

   19 fun-declaration: type-specifier ID LPAREN . params RPAREN statement

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 22 (params)

    type-specifier   go to state 18
    params           go to state 32
    param-list       go to state 20
    param-type-list  go to state 21


state 23

   13 var-decl-id: ID LBRACKET . NUMCONST RBRACKET

    NUMCONST  shift, and go to state 33


state 24

    6 var-declaration: type-specifier var-decl-list SEMICOLON .

    $default  reduce using rule 6 (var-declaration)


state 25

    8 var-decl-list: var-decl-list COMMA . var-decl-initialize

    ID  shift, and go to state 34

    var-decl-initialize  go to state 35
    var-decl-id          go to state 17


state 26

   11 var-decl-initialize: var-decl-id COLON . simple-expression

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    LPAREN       shift, and go to state 41
    NOT          shift, and go to state 42
    MINUS        shift, and go to state 43
    MULTIPLY     shift, and go to state 44
    QUESTION     shift, and go to state 45

    simple-expression     go to state 46
    and-expression        go to state 47
    unary-rel-expression  go to state 48
    rel-expression        go to state 49
    sum-expression        go to state 50
    term                  go to state 51
    unary-expression      go to state 52
    unaryop               go to state 53
    factor                go to state 54
    mutable               go to state 55
    immutable             go to state 56
    call                  go to state 57
    constant              go to state 58


state 27

   28 param-id: ID .
   29         | ID . LBRACKET RBRACKET

    LBRACKET  shift, and go to state 59

    $default  reduce using rule 28 (param-id)


state 28

   25 param-type-list: type-specifier param-id-list .
   26 param-id-list: param-id-list . COMMA param-id

    COMMA  shift, and go to state 60

    $default  reduce using rule 25 (param-type-list)


state 29

   27 param-id-list: param-id .

    $default  reduce using rule 27 (param-id-list)


state 30

   20 fun-declaration: ID LPAREN params RPAREN . statement

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    STRINGCONST  shift, and go to state 38
    CHARCONST    shift, and go to state 39
    BOOLCONST    shift, and go to state 40
    IF           shift, and go to state 61
    WHILE        shift, and go to state 62
    FOREACH      shift, and go to state 63
    RETURN       shift, and go to state 64
    BREAK        shift, and go to state 65
    SEMICOLON    shift, and go to state 66
    LPAREN       shift, and go to state 41
    NOT          shift, and go to state 42
    MINUS        shift, and go to state 43
    MULTIPLY     shift, and go to state 44
    QUESTION     shift, and go to state 45
    LBRACE       shift, and go to state 67

    statement                 go to state 68
    matched                   go to state 69
    unmatched                 go to state 70
    matched-selection-stmt    go to state 71
    unmatched-selection-stmt  go to state 72
    matched-while-stmt        go to state 73
    unmatched-while-stmt      go to state 74
    matched-foreach-stmt      go to state 75
    unmatched-foreach-stmt    go to state 76
    compound-stmt             go to state 77
    expression-stmt           go to state 78
    return-stmt               go to state 79
    break-stmt                go to state 80
    expression                go to state 81
    simple-expression         go to state 82
    and-expression            go to state 47
    unary-rel-expression      go to state 48
    rel-expression            go to state 49
    sum-expression            go to state 50
    term                      go to state 51
    unary-expression          go to state 52
    unaryop                   go to state 53
    factor                    go to state 54
    mutable                   go to state 83
    immutable                 go to state 56
    call                      go to state 57
    constant                  go to state 58


state 31

   23 param-list: param-list SEMICOLON . param-type-list

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4
